Step 2: Setup Feature Management

--- a/Geometry.Console/Geometry.Console.csproj
+++ b/Geometry.Console/Geometry.Console.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Geometry.Library\Geometry.Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.FeatureManagement" Version="3.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
