--- a/Geometry.Console/Geometry.Console.csproj
+++ b/Geometry.Console/Geometry.Console.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="3.2.0" />
   </ItemGroup>
 
